2019-02-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/pdk14/support.c:
	  Make regression tests compile, even before simulator is ready.
	* device/lib/pdk14/Makefile.in,
	  device/lib/pdk15/Makefile.in:
	  Enable a missing support function.
	* src/pdk/gen.c:
	  Improve bit-field access.

2019-02-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix handling of wide return values.

2019-02-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sim/ucsim/z80.src/inst_ed.c:
	  Implement Z80/Z180/eZ80 rld, rrd.
	* src/z80/gen.c,
	  support/regression/tests/bitfields.c:
	  Improve bit-field write.

2019-02-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/asrab/rabadr.c,
	  src/z80/gen.c:
	  Fix bug #2869.

2019-02-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c
	  src/pdk/ralloc2.cc:
	  Various pdk improvements.

2019-02-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCdwarf2.c: fix bug #2762

2019-02-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/main.c,
	  src/pdk/ralloc2.cc:
	  Various pdk improvements.
	* device/lib/calloc.c,
	  device/lib/free.c,
	  device/lib/malloc.c,
	  device/lib/realloc.c:
	  Improve dynamic memory management for pdk.
	* device/lib/_memchr.c:
	  Improve comparison.

2019-02-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* configure,
	  configure.ac,
	  device/include/stdlib.h,
	  device/lib/Makefile.in,
	  device/lib/clean.mk,
	  device/lib/pdk15/Makefile.in,
	  device/lib/pdk15:
	  pdk15 library.
	* src/pdk/main.c,
	  src/pdk/gen.c:
	  Improve read from pointer.

2019-02-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Makefile.common.in,
	  Makefile.in,
	  configure,
	  configure.ac,
	  sdccconf_in.h,
	  src/pdk/main.c,
	  sdas/aspdk15:
	  pdk15 assembler, patch by Nicolas Lesser.

2019-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* .version,