@@ -1,3 +1,12 @@
+2019-02-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c:
+	  Use ltabl for pdk15.
+
+2019-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCicode.c: fix bug #2829
+
 2019-02-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/ports/pdk14/support.c:
